[gd_scene load_steps=6 format=2]

[ext_resource path="res://2.5D Fighting Game Camera/Camera.gd" type="Script" id=1]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 0.2, 100, 100 )

[sub_resource type="BoxShape" id=3]
extents = Vector3( 1.5, 100, 100 )

[sub_resource type="BoxShape" id=2]
extents = Vector3( 0.2, 100, 100 )

[sub_resource type="BoxShape" id=4]
extents = Vector3( 1.5, 100, 100 )

[node name="CameraFollow" type="Camera"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.47832, 4.61063 )
script = ExtResource( 1 )
__meta__ = {
"_editor_description_": ""
}
zoom = 6.0
Ypos = 2.0
speed = 6.0
Player1Path = NodePath("../Fighter")
Player2Path = NodePath("../Fighter2")

[node name="Walls" type="Spatial" parent="."]

[node name="LEFT" type="StaticBody" parent="Walls"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -4.19862, 0, 0 )

[node name="CollisionShape" type="CollisionShape" parent="Walls/LEFT"]
shape = SubResource( 1 )

[node name="LEFTAREA" type="Area" parent="Walls/LEFT"]

[node name="CollisionShape" type="CollisionShape" parent="Walls/LEFT/LEFTAREA"]
shape = SubResource( 3 )

[node name="RIGHT" type="StaticBody" parent="Walls"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3.85073, 0, 0 )

[node name="CollisionShape" type="CollisionShape" parent="Walls/RIGHT"]
shape = SubResource( 2 )

[node name="RIGHTAREA" type="Area" parent="Walls/RIGHT"]

[node name="CollisionShape" type="CollisionShape" parent="Walls/RIGHT/RIGHTAREA"]
shape = SubResource( 4 )

[connection signal="body_entered" from="Walls/LEFT/LEFTAREA" to="." method="_on_LEFTAREA_body_entered"]
[connection signal="body_exited" from="Walls/LEFT/LEFTAREA" to="." method="_on_LEFTAREA_body_exited"]
[connection signal="body_entered" from="Walls/RIGHT/RIGHTAREA" to="." method="_on_RIGHTAREA_body_entered"]
[connection signal="body_exited" from="Walls/RIGHT/RIGHTAREA" to="." method="_on_RIGHTAREA_body_exited"]
